# stm32f4-rust-embassy

./: Cargo.toml  README.md  rust-toolchain.toml
